bop: fix some width / spacing issues. closes #998

--- a/less/slides.less
+++ b/less/slides.less
@@ -381,10 +381,9 @@
 #graphic-bop {
 	.clearfix();
 
-    .chart {
-        float: left;
-        padding-bottom: 1vw;
-    }
+    .chart { padding-bottom: 1vw; }
+    .chart-house { float: right; }
+    .chart-senate { float: left; }
 
 	.majority {
 		line {
